mongoCluster/MultipleContainer_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-app
  template:
    metadata:
      labels:
        app: mongodb-app
    spec:
      containers:
        - name: mongodb-con
          image: mongo:latest
          ports:
            - containerPort: 27017
          #            - nodePort: 27017
        - name: mongo-express-con
          image: mongo-express:latest
          ports:
            - containerPort: 8081
          #            - nodePort: 27017
---
# Services

  # Internal Service for MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb-app
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
  # Express Service for MongoExpress
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongodb-app
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
