mongoCluster/mongoEx_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoex-deployment
  namespace: ns-mongo
  labels:
    app: mongoex-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoex-app
  template:
    metadata:
      labels:
        app: mongoex-app
    spec:
      containers:
        - name: mongo-express-con
          image: mongo-express:latest
          ports:
            - containerPort: 8081
          #            - nodePort: 27017
---
# Services
  # Express Service for MongoExpress
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: ns-mongo
spec:
  selector:
    app: mongoex-app
#  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
#      nodePort: 30001 # nodePort can be from 30000 (30K) to 32K.. something.
