mongoCluster/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoex-ingress
  namespace: ns-mongo
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #  ingressClassName: nginx-example
  rules:
    - host: pmtkitchen.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
